--- a/data-collection-software/index.html
+++ b/data-collection-software/index.html
@@ -84,7 +84,11 @@
                 b = 0.7; // the steepness of curvature
                 c = 0; // where 0 point is
                 d = 0;
+                if (slope>= 0) {
                 quadraticFunction = (Math.pow(a*x, 2)+c*x+d)/(1-b);
+                } else {
+                quadraticFunction = -(Math.pow(a*x, 2)+c*x+d)/(1-b);
+                }
                 console.log(quadraticFunction);
                 return quadraticFunction;
             }
@@ -101,7 +105,7 @@
             axes.scale = 40;                 // 40 pixels from x=0 to x=1 (length of graph, scaled up)
             axes.doNegativeX = true;
 
-            funGraph(ctx,axes,fun1,"rgb(11,153,11)",1); 
+            funGraph(ctx,axes,fun1,"black",2); 
             }
 
             function funGraph (ctx,axes,func,color,thick) {
