--- a/data-collection-software/index.html
+++ b/data-collection-software/index.html
@@ -173,7 +173,6 @@
                 axes.scale = 40;                 // 40 pixels from x=0 to x=1 (length of graph, scaled up)
                 axes.doNegativeX = true;
                 drawQuadraticGraph(ctx)
-                // funGraph(ctx,axes,fun1,"black",2); 
             }
 
             function drawQuadraticGraph (ctx) {
@@ -189,23 +188,13 @@
                 ctx.strokeStyle = 'black';
                 for (var i = 0; i<resolution; i++) {
                     X1 = scale(i, 0, resolution, 0, 1);
-                    Y1 = m*Math.pow(X1,2) + b;
-                    if (correctGraphSlope < 0) {
-                        Y1 = 1-(Y1);
-                    }
+                    Y1 = sliderValue*Math.pow(X1,2)+(m-sliderValue)*X1 + b;
                     X2 = scale(i+1, 0, resolution, 0, 1);
-
-                    Y2 = m*Math.pow(X2,2) + b;
-                    if (correctGraphSlope < 0) {
-                        Y2 = 1-(Y2);
-                    }
-                    console.log('sv: ', sliderValue, ' X2: ', X2, ' Y2: ', Y2);
+                    Y2 = sliderValue*Math.pow(X2,2)+(m-sliderValue)*X2 + b;
                 ctx.moveTo(toScreenX(i/resolution),toScreenY(Y1));
-                // start drawing
                 ctx.lineTo(toScreenX((i+1)/resolution),toScreenY(Y2));
                 }
                 ctx.stroke();
-                console.log('correctGraphSlope: ', correctGraphSlope, ' b: ', b);
             }
 
             function toScreenY(dataY) {
