--- a/data-collection-software/index.html
+++ b/data-collection-software/index.html
@@ -126,7 +126,7 @@
                 if (line === "line") {
                     drawLinearRegression(this.value);
                 } else if (line === "quad") {
-                    drawQuadraticRegression(this.value);
+                    drawQuadraticRegression(sliderValue);
                 } else if (line === "trig") {
                     drawTrigonometricRegression(this.value);
                 }
@@ -192,21 +192,40 @@
                 ctx.stroke();
             }
 
-            // Canvas drawing quadratic regression
-            function drawQuadraticRegression(m) {
+            function drawQuadraticRegression(sliderValue) {
                 let ctx = canvas.getContext("2d");
                 ctx.clearRect(0, 0, 300, 525);
                 ctxb.drawImage(background,0,0,300,525);
-
+                let b = scale(correctGraphSlope, -1, 1, 1, 0);
+                let resolution = 100;
+                let X1;
+                let Y1;
+                let X2;
+                let Y2;
                 ctx.beginPath();
-                ctx.moveTo(0, 260 + m * 155);
-                for (var angle = 0; angle < 300; angle += 1){
-                    var x = angle;
-                    var y = -m * Math.pow(angle/17.2, 2) + 260 + m * 155;
-                    ctx.lineJoin = 'round';
-                    ctx.lineTo(x,y);
+                ctx.lineWidth = 3;
+                ctx.strokeStyle = 'black';
+                for (var i = 0; i<resolution; i++) {
+                    X1 = scale(i, 0, resolution, 0, 1);
+                    Y1 = sliderValue*Math.pow(X1,2)+(correctGraphSlope-sliderValue)*X1 + b;
+                    X2 = scale(i+1, 0, resolution, 0, 1);
+                    Y2 = sliderValue*Math.pow(X2,2)+(correctGraphSlope-sliderValue)*X2 + b;
+                ctx.moveTo(toScreenX(i/resolution),toScreenY(Y1));
+                ctx.lineTo(toScreenX((i+1)/resolution),toScreenY(Y2));
                 }
                 ctx.stroke();
+            }
+
+            function toScreenY(dataY) {
+                return scale(dataY, 0, 1, 525-(2*5)-112.5, (2*5)+112.5);
+            }
+
+            function toScreenX(dataX) {
+                return scale(dataX, 0, 1, (2*5), 300-(2*5));
+            }
+
+            const scale = (num, in_min, in_max, out_min, out_max) => {
+                return (num - in_min) * (out_max - out_min) / (in_max - in_min) + out_min;
             }
             
         </script>
