--- a/index.html
+++ b/index.html
@@ -9,6 +9,25 @@
 
     </head>
     <body>
+        <select onchange="selectParticipant()" id="participantDropdown">
+                <option value="">choose participant</option>
+                <option value="P1">P1</option>
+                <option value="P2">P2</option>
+                <option value="P3">P3</option>
+                <option value="P4">P4</option>
+                <option value="P5">P5</option>
+                <option value="P6">P6</option>
+                <option value="P7">P7</option>
+                <option value="P8">P8</option>
+                <option value="P9">P9</option>
+                <option value="P10">P10</option>
+                <option value="P11">P11</option>
+                <option value="P12">P12</option>
+                <option value="P13">P13</option>
+                <option value="P14">P14</option>
+                <option value="P15">P15</option>
+                <option value="P16">P16</option>
+                </select>
 
         <canvas id="myCanvas" width="300" height="525"></canvas>
 
@@ -45,8 +64,15 @@
             let line;
             let correctGraphSlope;
             let x0, x1, y0, y1;
+            let participant = '';
 
-            setupExperiment();
+            function selectParticipant() {
+                participant = participantDropdown.value;
+                console.log('pa: ', participant);
+                setupExperiment();
+            }
+
+            // setupExperiment();
 
             // Setup experiment
             async function setupExperiment() {
@@ -69,7 +95,7 @@
 
             // Load in the csv file and convert it to an object
             async function loadData() {
-                let data = $.get("./data/csvs/P1.csv").then(function(csv){
+                let data = $.get("./data/csvs/" + participant + ".csv").then(function(csv){
                     var lines = csv.split("\n");
                     var result = [];
                     var headers = lines[0].split(",");
@@ -107,7 +133,7 @@
                 var hiddenElement = document.createElement('a');
                 hiddenElement.href = 'data:text/csv;charset=utf-8,' + encodeURI(str);
                 hiddenElement.target = '_blank';
-                hiddenElement.download = 'P1.csv';
+                hiddenElement.download = participant + '.csv';
                 hiddenElement.click();
 
                 return str;
