--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Slider Example</title>
+  <title>Replication study</title>
 
   <link rel="stylesheet" href="styles.css"/>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
@@ -28,21 +28,23 @@
     <option value="P15">P15</option>
     <option value="P16">P16</option>
   </select>
+  <div  id = "main_experiment" hidden>
+    <h3>Adjust the slider </h3>
+    <canvas id="myCanvas" width="300" height="525"></canvas>
 
-  <canvas id="myCanvas" width="300" height="525"></canvas>
+    <div class="history" id="m_value" hidden>
+      <span>m = </span>
+      <span id="demo"></span>
+    </div>
 
-  <div class="history">
-    <span>m = </span>
-    <span id="demo"></span>
-  </div>
+    <div class="slidecontainer" id="slideContainer" >
+      <input type="range" min="-1" max="1" step="0.01" value="0" class="slider" id="myRange">
+    </div>
 
-  <div class="slidecontainer">
-    <input type="range" min="-1" max="1" step="0.01" value="0" class="slider" id="myRange">
-  </div>
-
-  <div class="buttonContainer">
-    <button id="prevButton" type="button" onclick="previous()">Previous</button>
-    <button id="nextButton" type="button" onclick="next()" disabled>Next</button>
+    <div class="buttonContainer" id="buttonContainer" >
+      <button id="prevButton" type="button" onclick="previous()">Previous</button>
+      <button id="nextButton" type="button" onclick="next()" disabled>Next</button>
+    </div>
   </div>
 
   <script type="text/javascript">
@@ -60,7 +62,10 @@
   let graphtype;
   let taskCount;
   let headers;
+
   function selectParticipant() {
+    main_experiment.hidden = false;
+    participantDropdown.hidden = true;
     participant = participantDropdown.value;
     console.log('pa: ', participant);
     setupExperiment();
@@ -149,65 +154,65 @@
     data[taskIndex].answer = slider.value;
     nextButton.disabled = true;
 
-  if (taskIndex >= taskCount-1) {
-    let csvData = saveData();
-  } else {
-    taskIndex = taskIndex + 1;
-    newGraph();
-  }
-}
-
-// Change the data based on input and move to the new task
-function previous() {
-  if (taskIndex >= 1) {
-    data[taskIndex].answer = slider.value;
-    taskIndex = taskIndex - 1;
-    nextButton.disabled = true;
-    newGraph();
-  } else {
-    alert("You can't move back. This is the first task.")
-  }
-}
-
-//draw the regression
-function drawRegression(sliderValue) {
-  let ctx = canvas.getContext("2d");
-  ctx.lineWidth = 3;
-  ctx.strokeStyle = 'black';
-  ctx.clearRect(0, 0, 300, 525);
-  ctxb.drawImage(background, 0, 0, 300, 525);
-  let resolution = 100;
-  let X1, X2, Y1, Y2;
-  ctx.beginPath();
-  for (var i = 0; i < resolution; i++) {
-    X1 = scale(i, 0, resolution, 0, 1);
-    X2 = scale(i + 1, 0, resolution, 0, 1);
-    if (graphtype === "line") {
-      Y1 = 0.5 + (X1 - 0.5) * sliderValue;
-      Y2 = 0.5 + (X2 - 0.5) * sliderValue;
-    } else if (graphtype === "trig") {
-      Y1 = 0.5 - 0.5 * Math.cos(X1 * Math.PI) * sliderValue;
-      Y2 = 0.5 - 0.5 * Math.cos(X2 * Math.PI) * sliderValue;
-    } else if (graphtype === "quad") {
-      Y1 = 0.5 + sliderValue * Math.pow(X1,2) - 0.5 * sliderValue;
-      Y2 = 0.5 + sliderValue * Math.pow(X2,2) - 0.5 * sliderValue;
+    if (taskIndex >= taskCount-1) {
+      let csvData = saveData();
+    } else {
+      taskIndex = taskIndex + 1;
+      newGraph();
     }
-    ctx.moveTo(toScreenX(i/resolution),toScreenY(Y1));
-    ctx.lineTo(toScreenX((i+1)/resolution),toScreenY(Y2));
-
   }
-  ctx.stroke();
-}
 
-function toScreenY(dataY) {
-  return scale(dataY, 0, 1, 525 - (2 * 5)- 112.5, (2 * 5) + 112.5);
-}
-function toScreenX(dataX) {
-  return scale(dataX, 0, 1, (2*5), 300-(2*5));
-}
-const scale = (num, in_min, in_max, out_min, out_max) => {
-  return (num - in_min) * (out_max - out_min) / (in_max - in_min) + out_min;
-}
+  // Change the data based on input and move to the new task
+  function previous() {
+    if (taskIndex >= 1) {
+      data[taskIndex].answer = slider.value;
+      taskIndex = taskIndex - 1;
+      nextButton.disabled = true;
+      newGraph();
+    } else {
+      alert("You can't move back. This is the first task.")
+    }
+  }
+
+  //draw the regression
+  function drawRegression(sliderValue) {
+    let ctx = canvas.getContext("2d");
+    ctx.lineWidth = 3;
+    ctx.strokeStyle = 'black';
+    ctx.clearRect(0, 0, 300, 525);
+    ctxb.drawImage(background, 0, 0, 300, 525);
+    let resolution = 100;
+    let X1, X2, Y1, Y2;
+    ctx.beginPath();
+    for (var i = 0; i < resolution; i++) {
+      X1 = scale(i, 0, resolution, 0, 1);
+      X2 = scale(i + 1, 0, resolution, 0, 1);
+      if (graphtype === "line") {
+        Y1 = 0.5 + (X1 - 0.5) * sliderValue;
+        Y2 = 0.5 + (X2 - 0.5) * sliderValue;
+      } else if (graphtype === "trig") {
+        Y1 = 0.5 - 0.5 * Math.cos(X1 * Math.PI) * sliderValue;
+        Y2 = 0.5 - 0.5 * Math.cos(X2 * Math.PI) * sliderValue;
+      } else if (graphtype === "quad") {
+        Y1 = 0.5 + sliderValue * Math.pow(X1,2) - 0.5 * sliderValue;
+        Y2 = 0.5 + sliderValue * Math.pow(X2,2) - 0.5 * sliderValue;
+      }
+      ctx.moveTo(toScreenX(i/resolution),toScreenY(Y1));
+      ctx.lineTo(toScreenX((i+1)/resolution),toScreenY(Y2));
+
+    }
+    ctx.stroke();
+  }
+
+  function toScreenY(dataY) {
+    return scale(dataY, 0, 1, 525 - (2 * 5)- 112.5, (2 * 5) + 112.5);
+  }
+  function toScreenX(dataX) {
+    return scale(dataX, 0, 1, (2*5), 300-(2*5));
+  }
+  const scale = (num, in_min, in_max, out_min, out_max) => {
+    return (num - in_min) * (out_max - out_min) / (in_max - in_min) + out_min;
+  }
 
 </script>
 
